--- a/src/app/start-quiz/start-quiz.component.html
+++ b/src/app/start-quiz/start-quiz.component.html
@@ -1,3 +1,3 @@
 <div>This pin does not exist</div>
 <div><input type="text" placeholder="Enter quiz pin" [(ngModel)]="pin"></div>
-<div><button (click)="start()">Start</button></div>
+<div><button (click)="start()">Enter</button></div>
