--- a/src/app/quiz-author/run-quiz/run-quiz.component.html
+++ b/src/app/quiz-author/run-quiz/run-quiz.component.html
@@ -1,15 +1,21 @@
 <div>
-  <h1>{{questions[currentQuestionId].question}}</h1>
-  answers here
-
-  <button (click)="next()">
+  <button (click)="next()" *ngIf="results">
     <span *ngIf="currentQuestionId != (questions.length - 1)">Next</span>
     <span *ngIf="currentQuestionId === (questions.length - 1)">Finish</span>
   </button>
+  <button (click)="showResults()" *ngIf="!results">Show Results</button>
+</div>
+<div *ngIf="timeLeft != 0">
+  <h1>{{questions[currentQuestionId].question}}</h1>
+  <div class="answer-block" *ngFor="let answer of questions[currentQuestionId].answers">
+    {{answer}}
+  </div>
   <h1>{{timeLeft}} secs left</h1>
 </div>
 
 
-<div *ngIf="false">
-  results
+<div *ngIf="results">
+  <div *ngFor="let result of results">
+    {{result.key}} - {{result.count}}
+  </div>
 </div>
